<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">K.K.マッシュ</string>
    <string name="beforetext">変換前</string>
    <string name="aftertext">変換後</string>
    <string name="koikelevel">変換レベル (%d/4)</string>
    <string name="okbutton">OK</string>

    <string name="menu_about">このアプリについて</string>
    <string name="label_version">Version </string>
    <string name="msg_about"></string>
    <string name="about_dt_author">製作: </string>
    <string name="about_dd_author">とがし</string>
    <string name="about_dt_web"></string>
    <string name="about_dd_web"></string>
    <string name="about_dt_email">メール: </string>
    <string name="about_dd_email">togashix@gmail.com</string>
    <string name="button_dismiss">閉じる</string>

</resources>
