<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        />
    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version X.X"
        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/msg_about"
        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
                android:text="@string/about_dt_author" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
                android:autoLink="all"
                android:text="@string/about_dd_author" />
        </TableRow>
<!--         <TableRow> -->
<!--             <TextView -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:textAppearance="@android:style/TextAppearance.Theme.Dialog" -->
<!--                 android:text="@string/about_dt_web" /> -->
<!--             <TextView -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_marginLeft="6sp" -->
<!--                 android:textAppearance="@android:style/TextAppearance.Theme.Dialog" -->
<!--                 android:autoLink="all" -->
<!--                 android:text="@string/about_dd_web" /> -->
<!--         </TableRow> -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
                android:text="@string/about_dt_email" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
                android:autoLink="all"
                android:text="@string/about_dd_email" />
        </TableRow>
    </TableLayout>
</LinearLayout>
